--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <link rel="me" href="https://post.lurk.org/@dook">
 <title> 404 Page not found  • d00k.net</title></head>
 <body>
-<div class="header"><nav><div style="width:45vw;height:auto;max-width:184px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu">
+<div class="header"><nav><div style="width:45vw;height:auto;max-width:184px;float:left"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu">
 <ul><li><a href="/photos/">Photos</a></li><li><a href="/wiki/">Wiki</a></li><li><a href="/design/">Design</a></li><li><a href="/blog/">Blog</a></li><li><a href="/about/">About</a></li></ul>
 </div></nav></div>
 <div class="main layout">
