--- a/wiki/design/font_resources/index.html
+++ b/wiki/design/font_resources/index.html
@@ -95,7 +95,8 @@ So instead of using Google Fonts, I implore people to consider checking out and 
 				
 				Last Updated: <strong>October 2025</strong>
 			</div>
-			<div>© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+			<div>© 2022—2025
+			<span> BY-NC-SA 4.0</span>
 </div>
 </details>
 </div>
