--- a/wiki/linux/sftp/index.html
+++ b/wiki/linux/sftp/index.html
@@ -54,7 +54,8 @@ To transfer a whole directory of files, the <strong>-r</strong> flag can be used
 				
 				Last Updated: <strong>October 2025</strong>
 			</div>
-			<div>© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+			<div>© 2022—2025
+			<span> BY-NC-SA 4.0</span>
 </div>
 </details>
 </div>
