--- a/wiki/rockbox_advanced/vector_graphics/index.html
+++ b/wiki/rockbox_advanced/vector_graphics/index.html
@@ -39,7 +39,8 @@ You will also need access to vector graphics. You can create your own, or find s
 				
 				Last Updated: <strong>October 2025</strong>
 			</div>
-			<div>© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+			<div>© 2022—2025
+			<span> BY-NC-SA 4.0</span>
 </div>
 </details>
 </div>
