--- a/wiki/rockbox_theming/the_viewport/index.html
+++ b/wiki/rockbox_theming/the_viewport/index.html
@@ -68,7 +68,8 @@ There are some notable quirks with the Backdrop layer that are worth noting now.
 				
 				
 			</div>
-			<div>© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+			<div>© 2022—2025
+			<span> BY-NC-SA 4.0</span>
 </div>
 </details>
 </div>
