--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 				
 				Last Updated: <strong>August 2025</strong>
 			</div>
-			<div>© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+			<div>© 2022—2025
+			<span> BY-NC-SA 4.0</span>
 </div>
 </details>
 </div>
