--- a/photos/trichrome/spring/index.html
+++ b/photos/trichrome/spring/index.html
@@ -46,7 +46,8 @@
 				
 				Last Updated: <strong>September 2023</strong>
 			</div>
-			<div>© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+			<div>© 2022—2025
+			<span> BY-NC-SA 4.0</span>
 </div>
 </details>
 </div>
