--- a/wiki/design/design_library/index.html
+++ b/wiki/design/design_library/index.html
@@ -195,7 +195,8 @@
 				
 				
 			</div>
-			<div>© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+			<div>© 2022—2025
+			<span> BY-NC-SA 4.0</span>
 </div>
 </details>
 </div>
