--- a/wiki/rockbox_advanced/font_combining/index.html
+++ b/wiki/rockbox_advanced/font_combining/index.html
@@ -95,7 +95,8 @@ Often, the merged font won't match the base font in scale. To fix this we can tr
 				
 				Last Updated: <strong>September 2025</strong>
 			</div>
-			<div>© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+			<div>© 2022—2025
+			<span> BY-NC-SA 4.0</span>
 </div>
 </details>
 </div>
