--- a/wiki/rockbox_advanced/missing_features/index.html
+++ b/wiki/rockbox_advanced/missing_features/index.html
@@ -78,7 +78,8 @@ Adding a tag that would force a line to break like the %al tag forces a tag to a
 				
 				Last Updated: <strong>September 2025</strong>
 			</div>
-			<div>© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+			<div>© 2022—2025
+			<span> BY-NC-SA 4.0</span>
 </div>
 </details>
 </div>
