--- a/wiki/rockbox_advanced/rockbox_image_optimisation/index.html
+++ b/wiki/rockbox_advanced/rockbox_image_optimisation/index.html
@@ -78,7 +78,8 @@ mogrify -ordered-dither o8x8,32,64,32 -compress None -type palette -format bmp -
 				
 				Last Updated: <strong>September 2023</strong>
 			</div>
-			<div>© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+			<div>© 2022—2025
+			<span> BY-NC-SA 4.0</span>
 </div>
 </details>
 </div>
