--- a/wiki/rockbox_theming/introduction/index.html
+++ b/wiki/rockbox_theming/introduction/index.html
@@ -65,7 +65,8 @@
 				
 				Last Updated: <strong>October 2025</strong>
 			</div>
-			<div>© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+			<div>© 2022—2025
+			<span> BY-NC-SA 4.0</span>
 </div>
 </details>
 </div>
