--- a/wiki/websites/cheatsheet/index.html
+++ b/wiki/websites/cheatsheet/index.html
@@ -115,7 +115,8 @@ border-style: outset;</code></pre><hr>
 				
 				Last Updated: <strong>October 2025</strong>
 			</div>
-			<div>© 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+			<div>© 2022—2025
+			<span> BY-NC-SA 4.0</span>
 </div>
 </details>
 </div>
